<resources>
    <string name="app_name">KLM APP</string>
    <string name="error_date">Please select the date</string>
    <string name="error_flight">Please enter the valid flight number</string>
    <string name="error_departing">Please enter the Departing</string>
    <string name="error_arriving">Please enter the Arriving</string>
    <string name="error_cities">Please enter the Cities</string>
    <string name="error_origin">Please enter the Origin</string>
    <string name="under_dev">Under Development</string>
    <string name="flightdata">flightdata</string>
    <string name="flightroutedata">flightroutedata</string>
    <string name="destinationroutedata">destinationroutedata</string>
    <string name="destinationdetaildata">destinationdetaildata</string>
    <string name="token">token</string>
    <string name="select_date">Select Date</string>
    <string name="status_flight">Status flight KL%1$d</string>
    <string name="internet_check">Please check the internet connection</string>
    <string name="departing_from">Departing from, eg.AMS</string>
    <string name="arriving_at">Arrving at, eg.CDG</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="search_route">Search Route</string>
    <string name="flight_route_data">flightRouteData</string>
    <string name="flight_status">Flight Status</string>
    <string name="flight_route">Flight Route</string>
    <string name="destination_suggestions">Destination Suggestion</string>
    <string name="weather_information">Weather Information</string>
    <string name="cities_hint">Cities, eg.AMS,CDG </string>
    <string name="search_destination">Search Destination</string>
    <string name="destination_detail">Destination Details</string>
    <string name="destination_hint">AMS</string>
    <string name="degree_symbol">%1$s\u00B0 %2$s</string>
    <string name="route_list">Route List</string>
    <string name="flight_detail">Flight Details</string>
    <string name="arrival_time">%1$s &#45; %2$s</string>
    <string name="from_to">%1$s &#45; %2$s</string>
    <string name="flight_number">KL%1$d</string>
    <string name="bearer_token">Bearer %1$s</string>
    <string name="not_authorized">Not Authorized</string>
</resources>
