<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/departing_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:ems="10"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/departing_from"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/arriving_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/arriving_at"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/start_date"
            android:layout_width="230dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_marginTop="48dp"
            android:text="@string/start_date" />

        <Button
            android:id="@+id/end_date"
            android:layout_width="230dp"
            android:layout_height="49dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:text="@string/end_date" />

        <Button
            android:id="@+id/searchroute"
            android:layout_width="230dp"
            android:layout_height="49dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:text="@string/search_route" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>